--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,8 +97,13 @@
         </div>
         <div id="footer">
             <p>stoeva.rositsa@gmail.com | &copy;RositsaStoeva</p>
+
+            <!-- <p class="email">stoeva.rositsa@gmail.com</p>
+            <p class="copyright">&copy;RositsaStoeva</p> -->
         </div>
     </div>
 
     <script src="portfolio-grid-gallery3-tests.js"></script>
 </body>
+
+</html>
