--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <img src="images/sz-oblastna calendar-2018/3-sz-oblastna-calendar-2018.jpg"
                     alt="District administration of Stara Zagora wall calendar 2018 " class="masonry-content">
             </div>
-            <div class="masonry-item"><img src="images/image03.jpg" alt="image03" class="masonry-content"></div>
+            <div class="masonry-item">
+                <img src="images/manual-troshev-2018/4-manual-troshev-2018.jpg" 
+                alt="Patient manual of Troshev eye clinic" class="masonry-content">
+            </div>
             <div class="masonry-item"><img src="images/image04.jpg" alt="image04" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image05.jpg" alt="image05" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image06.jpg" alt="image06" class="masonry-content"></div>
