--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
                 <img src="images/manual-troshev-2018/4-manual-troshev-2018.jpg" 
                 alt="Patient manual of Troshev eye clinic" class="masonry-content">
             </div>
-            <div class="masonry-item"><img src="images/image04.jpg" alt="image04" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image05.jpg" alt="image05" class="masonry-content"></div>
+            <div class="masonry-item">
+                <img src="images/vidachim-brochure-2014/2-vidachim-brochure-2014.jpg" 
+                alt="Vidachim tyres catalogue 2014" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/vidachim-calendar-2013/3-vidachim-calendar-2013.jpg" 
+                alt="Vidachim calendars 2013" class="masonry-content">
+            </div>
             <div class="masonry-item"><img src="images/image06.jpg" alt="image06" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image07.jpg" alt="image07" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image08.jpg" alt="image08" class="masonry-content"></div>
