--- a/index.html
+++ b/index.html
@@ -31,54 +31,64 @@
     <div id="prints" class="portfolio-page">
         <div class="masonry">
             <div class="masonry-item">
-                <img src="images/sz-report-2019/4-sz-report-2019.jpg" alt="Municipality of Stara Zagora report 2019"
-                    class="masonry-content">
+                <img src="images/prints/sz-report-2019/4-sz-report-2019.jpg"
+                    alt="Municipality of Stara Zagora report 2019" class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/sz-oblastna calendar-2018/3-sz-oblastna-calendar-2018.jpg"
+                <img src="images/prints/sz-district-calendar-2018/3-sz-district-calendar-2018.jpg"
                     alt="District administration of Stara Zagora wall calendar 2018 " class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/manual-troshev-2018/4-manual-troshev-2018.jpg" 
-                alt="Patient manual of Troshev eye clinic" class="masonry-content">
+                <img src="images/prints/manual-troshev-2018/4-manual-troshev-2018.jpg"
+                    alt="Patient manual of Troshev eye clinic" class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/vidachim-brochure-2014/2-vidachim-brochure-2014.jpg" 
-                alt="Vidachim tyres catalogue 2014" class="masonry-content">
+                <img src="images/prints/packs-croissants-hlebo-2018/4-packs-croissants-hlebo-2018.jpg"
+                    alt="Croissant packs - Hleboproizvodstvo Stara Zagora - 2018" class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/vidachim-calendar-2013/3-vidachim-calendar-2013.jpg" 
-                alt="Vidachim calendars 2013" class="masonry-content">
+                <img src="images/prints/knsb-calendar-2018/2-knsb-calendar-2018.jpg"
+                    alt="KNSB calendar - 2018" class="masonry-content">
             </div>
-            <div class="masonry-item"><img src="images/image06.jpg" alt="image06" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image07.jpg" alt="image07" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image08.jpg" alt="image08" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image09.jpg" alt="image09" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image10.jpg" alt="image10" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image01.jpg" alt="image01" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image02.jpg" alt="image02" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image03.jpg" alt="image03" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image04.jpg" alt="image04" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image05.jpg" alt="image05" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image06.jpg" alt="image06" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image07.jpg" alt="image07" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image08.jpg" alt="image08" class="masonry-content"></div>
+            <div class="masonry-item">
+                <img src="images/prints/vidachim-brochure-2014/2-vidachim-brochure-2014.jpg"
+                    alt="Vidachim tyres catalogue 2014" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/prints/brochure-ivan-rilski-hospital/2-brochure-ivan-rilski-hospital.jpg"
+                    alt="Brochure of Ivan Rilski hospital" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/prints/vidachim-calendar-2013/3-vidachim-calendar-2013.jpg"
+                    alt="Vidachim calendars 2013" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/prints/mmi-annual-report-2013/3-mmi-annual-report-2013.jpg"
+                    alt="Annual report of Mini Maritsa Iztok coal mining company 2013" class="masonry-content">
+            </div>
         </div>
     </div>
     <div id="paintings" class="portfolio-page">
         <div class="masonry">
-            <div class="masonry-item"><img src="images/image03.jpg" alt="image03" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image04.jpg" alt="image04" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image05.jpg" alt="image05" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image06.jpg" alt="image06" class="masonry-content"></div>
+            <div class="masonry-item">
+                <img src="images/paintings/in-the-grass/2-in-the-grass.jpg" alt="Feet in the grass - watercolor"
+                    class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/paintings/dahlia/1-dahlia.jpg" alt="Dahlia - watercolor" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/paintings/breads-adventure/1-breads-adventure.jpg"
+                    alt="Bread's adventure - digital painting" class="masonry-content">
+            </div>
+            <div class="masonry-item">
+                <img src="images/paintings/baker-logo/1-baker.jpg" alt="The old baker - logo" class="masonry-content">
+            </div>
             <div class="masonry-item"><img src="images/image07.jpg" alt="image07" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image08.jpg" alt="image08" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image09.jpg" alt="image09" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image10.jpg" alt="image10" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image01.jpg" alt="image01" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image02.jpg" alt="image02" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image03.jpg" alt="image03" class="masonry-content"></div>
-            <div class="masonry-item"><img src="images/image04.jpg" alt="image04" class="masonry-content"></div>
             <div class="masonry-item"><img src="images/image05.jpg" alt="image05" class="masonry-content"></div>
         </div>
     </div>
