Add new js file with fade effect

--- a/index.html
+++ b/index.html
@@ -110,13 +110,11 @@
         </div>
         <div id="footer">
             <p>stoeva.rositsa@gmail.com | &copy;RositsaStoeva</p>
-
-            <!-- <p class="email">stoeva.rositsa@gmail.com</p>
-            <p class="copyright">&copy;RositsaStoeva</p> -->
         </div>
     </div>
 
-    <script src="portfolio-grid-gallery3-tests.js"></script>
+    <!-- <script src="portfolio-grid-gallery3-tests.js"></script> -->
+    <script src="portfolio-grid-gallery3-fade-tests.js"></script>
 </body>
 
 </html>
