--- a/index.html
+++ b/index.html
@@ -43,12 +43,16 @@
                     alt="Patient manual of Troshev eye clinic" class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/prints/packs-croissants-hlebo-2018/4-packs-croissants-hlebo-2018.jpg"
-                    alt="Croissant packs - Hleboproizvodstvo Stara Zagora - 2018" class="masonry-content">
+                <img src="images/prints/posters/2-poster.jpg"
+                    alt="Posters" class="masonry-content">
             </div>
             <div class="masonry-item">
-                <img src="images/prints/knsb-calendar-2018/2-knsb-calendar-2018.jpg"
+                <img src="images/prints/packs-croissants-hlebo-2018/4-packs-croissants-hlebo-2018.jpg"
                     alt="Croissant packs - Hleboproizvodstvo Stara Zagora - 2018" class="masonry-content">
+                </div>
+            <div class="masonry-item">
+                <img src="images/prints/knsb-calendar-2018/2-knsb-calendar-2018.jpg"
+                alt="Calendar KNSB - Stara Zagora - 2018" class="masonry-content">
             </div>
             <div class="masonry-item">
                 <img src="images/prints/vidachim-brochure-2014/2-vidachim-brochure-2014.jpg"
